--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask==3.0.3
-line-bot-sdk==3.11.0
-google-generativeai==0.8.3
-gunicorn==23.0.0
-
+flask
+line-bot-sdk
+google-generativeai
+gunicorn
